# pnw-launcher

./: .gitignore  .railwayignore  Dockerfile  README-BUILD.md  README.md  VMS_LAUNCHER_INTEGRATIONS.md  index.html  latest.json  launcher.py  marshal_reader.py  package-lock.json  package.json  pnpm-lock.yaml  railpack.toml  supabase_battle_invites.sql  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
battle-server/: package-lock.json  package.json
battle-server/src/: index.js
docs/: AMELIORATIONS_LAUNCHER.md  RICH_PRESENCE_LIVE.md  improvement-suggestions.md  latest.sample.json
scripts/: create_patch.py  find-name.mjs  inspect-save.mjs  push-update.mjs  scan_zones.py
src/: App.tsx  GameUpdateDialog.tsx  LauncherSelfUpdateDialog.tsx  PatchNotesModal.tsx  Sidebar.tsx  Titlebar.tsx  UpdateDialog.tsx  banlist.ts  battleRelay.ts  cache.ts  chatAuth.ts  gtsDepositedPokemon.ts  index.css  launcherUiLocale.ts  leaderboard.ts  main.tsx  profile.ts  resources.json  saveWriter.ts  semver.d.ts  shinyDetect.ts  statsValidator.ts  supabaseClient.ts  supabaseGts.ts  themes.tsx  tradeP2P.ts  types.ts  ui.tsx
src-tauri/: .tauri-signing-key.pub  Cargo.toml  tauri.conf.json
src-tauri/bundler/nsis/: hooks.nsh
src-tauri/capabilities/: core.json  default.json  dialog.json
src-tauri/src/: battle_relay.rs  main.rs  psdk_data2.rs
src/components/: AdminPanel.tsx  CustomSelect.tsx  GtsSwapAnim.tsx  GtsTransferAnim.tsx  PatchMarkdownText.tsx
src/utils/: inlineMarkdown.tsx  monSprite.ts  patchMarkdownList.ts  patchNotes.ts  pokedexLookup.ts  typeStyles.ts
src/views/: BSTView.tsx  BattleArenaView.tsx  BossView.tsx  ChatView.tsx  ContactView.tsx  EVsLocationView.tsx  GTSView.tsx  GuideView.tsx  ItemLocationView.tsx  LoreView.tsx  NerfsAndBuffsView.tsx  PCBoxView.tsx  PatchNotesView.tsx  PokedexView.tsx  TeamView.tsx
src/views/battleTower/: BattleTowerHome.tsx  BattleTowerProfile.tsx  BattleTowerView.tsx  CombatAmicalView.tsx  CombatLeadView.tsx
